--- a/style.css
+++ b/style.css
@@ -28,12 +28,16 @@ body {
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
-  padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
 }
 
-.button1 {font-size: 10px;}
+.button1 {padding: 10px 24px;}
+.button2 {padding: 12px 28px;}
+.button3 {padding: 14px 40px;}
+.button4 {padding: 32px 16px;}
+.button5 {padding: 16px;}
